[package]
name = "sidechain"
version = "0.1.0"
edition = "2021"

[dependencies]
sidechain_proto = { path = "../sidechain_proto" }
bip300301_enforcer_proto = { path = "../bip300301_enforcer_proto" }

prost = "0.12.3"
tonic = "0.11.0"

heed = { git = "https://github.com/meilisearch/heed", tag = "v0.12.4", version = "0.12.4" }
clap = { version = "4.5.1", features = ["derive"] }
dirs = "5.0.1"
bincode = "1.3.3"

blake3 = "1.5.0"
ed25519-dalek = { version = "2.1.1", features = ["batch"] }

rayon = "1.9.0"

miette = { version = "7.1.0", features = ["fancy"] }
log = "0.4.21"
thiserror = "1.0.57"
serde = { version = "1.0.197", features = ["derive"] }
hex = "0.4.3"

quinn = "0.10.2"
zstd = "0.13.0"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }
confy = "0.6.1"
rs_merkle = "1.4.2"
bs58 = { version = "0.5.1", features = ["check"] }
bitcoin = "0.32.2"
